made it work, roughly

--- a/scrapeWebpage/getStoreLinks.ipynb
+++ b/scrapeWebpage/getStoreLinks.ipynb
@@ -2,17 +2,85 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "INCI Name:\n",
-      "Benzyl Alcohol, Caprylic/Capric Triglyceride, Citric Acid\n",
-      "Function:\n",
-      "Emulsifier (O/W), Emulsifier\n"
+      "[['INCI Name', 'Benzyl Alcohol, Caprylic/Capric Triglyceride, Citric Acid'], ['Function', 'Emulsifier (O/W), Emulsifier']]\n",
+      "\n",
+      "[['INCI Name', 'Dehydroacetic Acid, Benzyl Alcohol'], ['Function', 'Preservative, Fungistatic Agent, Bacteriostatic Agent'], ['Ingredient Origin', 'Synthetic'], ['Benefit Claims', 'Preservation, Chemical Stability, Broad pH Stability'], ['Labeling Claims', 'Credo Clean Standard, Not Tested on Animals, Cruelty-Free'], ['Certifications & Compliance', 'ECOCERT, EU Compliant, ISO 16128']]\n",
+      "\n",
+      "[['INCI Name', 'Scenedesmus Rubescens Extract, Phenoxyethanol'], ['Function', 'UV Protector, Anti-Aging Agent'], ['Ingredient Origin', 'Natural Origin, Vegetable Origin'], ['Labeling Claims', 'Alcohol-free, BSE-free, Porcine-free'], ['Certifications & Compliance', 'IECIC (China), ISO 16128, Halal'], ['Benefit Claims', 'Skin Barrier, Rejuvenating, Regenerating']]\n",
+      "\n",
+      "[['INCI Name', 'C12-13 Alkyl Lactate'], ['Function', 'Dispersant, Emollient, Moisturizing Agent, Wetting Agent, Viscosity Modifier, Re-Fatting Agent, Surfactant (Nonionic), Surfactant'], ['Labeling Claims', 'Antioxidants-free, Pesticide-free, Preservative-free'], ['HLB Value', '11.0 - 11.0']]\n",
+      "\n",
+      "[['INCI Name', 'Potassium Cetyl Phosphate'], ['Function', 'Emulsifier'], ['Ingredient Origin', 'Synthetic'], ['Labeling Claims', 'TSE-free, Non-GMO, PEG-free'], ['Certifications & Compliance', 'Halal, EU Cosmetic Regulation 1223/2009 Compliant, IECIC (China)']]\n",
+      "\n",
+      "[['INCI Name', 'Undecylenoyl Phenylalanine'], ['Function', 'Brightening Agent, Optical Brightener'], ['Labeling Claims', 'Clean at Sephora, Organic, Preservative-free'], ['Benefit Claims', 'Melanin Reduction, Redness Reduction, Whitening'], ['Certifications & Compliance', 'Organic Certified, NaTrue, COSMOS']]\n",
+      "\n",
+      "[['INCI Name', 'Dodecylhexadecanol'], ['Chemical Name', '2-Dodecyl-1-hexadecanol'], ['Function', 'Re-Fatting Agent, Solubilizer, Coupling Agent, Chemical Intermediate, Slip Agent, Emollient, Conditioner, Solvent, Pour Point Depressant'], ['End Uses', 'Surfactants, Ointments, Detergents'], ['CAS Number', '72388-18-2'], ['Chemical Family', 'Alcohols'], ['Grade', 'High Purity Grade'], ['Features', 'Good Solubility, Thermal Stability, Good Oxidation Property']]\n",
+      "\n",
+      "[['INCI Name', 'Octyldodecanol'], ['Chemical Name', '2-octyldodecan-1-ol'], ['Function', 'Coupling Agent, Intermediate, Solvent'], ['CAS Number', '5333-42-6'], ['Chemical Family', 'Alcohols'], ['Synonyms', '2-Octyl Dodecanol , 2-Octyldodecyl Alcohol , Octyl Dodecanol']]\n",
+      "\n",
+      "[['INCI Name', 'Sodium Citrate, Saccharide Isomerate, Citric Acid'], ['Function', 'Moisturizing Agent, Protective Agent'], ['Ingredient Origin', 'Natural Origin, Vegetable Origin'], ['Labeling Claims', 'Alcohol-free, Clean at Sephora, Porcine-free'], ['Certifications & Compliance', 'Organic Certified, NaTrue, IECIC (China)'], ['Benefit Claims', 'Skin Microbiome, Long Lasting, Hydrating']]\n",
+      "\n",
+      "[['INCI Name', 'Calcium Gluconate, Sodium Benzoate, Gluconolactone'], ['Function', 'Preservative Booster, Preservative, Fungistatic Agent, Bacteriostatic Agent'], ['Ingredient Origin', 'Natural Origin, Synthetic'], ['Benefit Claims', 'Preservation, Chemical Stability, Moisturizing'], ['Labeling Claims', 'Credo Clean Standard, Vegan, Naturally Derived'], ['Certifications & Compliance', 'NaTrue, ECOCERT, EU Compliant']]\n",
+      "\n",
+      "[['INCI Name', 'Di-C12-13 Alkyl Malate'], ['Function', 'Sebum Regulator, Moisturizing Agent, Emollient, Bulking Agent'], ['Ingredient Origin', 'Synthetic, Petrochemical'], ['Labeling Claims', \"Clean at Sephora, Ulta Beauty's Conscious Beauty\"], ['Benefit Claims', 'Emolliency']]\n",
+      "\n",
+      "[['INCI Name', 'Sodium Benzoate, Phenoxyethanol, Hydrolyzed Rice Protein'], ['Function', 'Restoring Agent, Protective Agent, Moisturizing Agent, Anti-Aging Agent'], ['Ingredient Origin', 'Natural Origin, Vegetable Origin'], ['Labeling Claims', 'Non-GMO, BSE-free, TSE-free'], ['Certifications & Compliance', 'EU Cosmetic Regulation 1223/2009 Compliant, REACH (Europe), IECIC (China)'], ['Benefit Claims', 'Anti-Aging, Emolliency, Skin Protection']]\n",
+      "\n",
+      "[['INCI Name', 'Docosane'], ['Chemical Name', 'n-docosane'], ['Function', 'Solvent, Intermediate'], ['CAS Number', '629-97-0'], ['Chemical Family', 'Alkanes']]\n",
+      "\n",
+      "[['INCI Name', 'Sodium Hydroxide'], ['Function', 'Solubilizer, Chemical Intermediate, Buffering Agent'], ['CAS Number', '1310-73-2'], ['Labeling Claims', \"Ulta Beauty's Conscious Beauty, Clean at Sephora, Credo Clean Standard\"], ['Synonyms', 'Caustic Soda , NaOH , Soda Lye , Sodium Hydrate , White Caustic']]\n",
+      "\n",
+      "[['INCI Name', 'Sodium Benzoate, Superoxide Dismutase, Potassium Sorbate'], ['Function', 'Anti-Puffing Agent'], ['Ingredient Origin', 'Natural Origin, Biotechnology, Vegetable Origin'], ['Labeling Claims', 'Paraben-free, BSE-free, Natural'], ['Benefit Claims', 'Collagen Boosting, Promotes Youthful Skin, Antioxidant Properties'], ['Certifications & Compliance', 'EU Cosmetic Regulation 1223/2009 Compliant, REACH (Europe), California Proposition 65']]\n",
+      "\n",
+      "[['INCI Name', 'Potassium Aspartate, Sodium Cocoyl Amino Acids, Magnesium Aspartate'], ['Function', 'Anti-Irritant, Anti-Inflammatory, Soothing Agent, Protective Agent'], ['Ingredient Origin', 'Plant Origin'], ['Labeling Claims', 'Preservative-free'], ['Benefit Claims', 'Soothing, Anti-Inflammatory']]\n",
+      "\n",
+      "[['INCI Name', 'Polyacrylate Crosspolymer-6'], ['Function', 'Suspension Aid, Stabilizer, Viscosity Modifier'], ['Ingredient Origin', 'Synthetic'], ['Labeling Claims', \"Credo Clean Standard, Clean at Sephora, Ulta Beauty's Conscious Beauty\"], ['Benefit Claims', 'Formula Stability, Good Consistency, Rich Feel']]\n",
+      "\n",
+      "[['INCI Name', 'Sodium Acrylate/Sodium Acryloyldimethyl Taurate Copolymer, Polysorbate 80, Isohexadecane'], ['Function', 'Viscosity Modifier, Stabilizer'], ['Labeling Claims', \"Preservative-free, Ulta Beauty's Conscious Beauty, Solvent-free\"], ['Certifications & Compliance', 'Quasi-Drug Additive'], ['Benefit Claims', 'Texturizing, Soft Feel']]\n",
+      "\n",
+      "[['INCI Name', 'Polyacrylamide, C13-14 Isoparaffin, Laureth-7'], ['Function', 'Viscosity Modifier, Emulsifier, Emulsion Stabilizer, Stabilizer'], ['Ingredient Origin', 'Synthetic'], ['Labeling Claims', \"Preservative-free, Ulta Beauty's Conscious Beauty\"], ['Benefit Claims', 'Texturizing, Formula Stability, Spreadability']]\n",
+      "\n",
+      "[['INCI Name', 'Arachidyl Alcohol, Arachidyl Glucoside, Behenyl Alcohol'], ['Function', 'Moisturizing Agent, Emulsifier, Emulsion Stabilizer, Stabilizer'], ['Ingredient Origin', 'Natural Origin'], ['Labeling Claims', 'Clean at Sephora, Organic, Credo Clean Standard'], ['Certifications & Compliance', 'Organic Certified, NaTrue, ECOCERT']]\n",
+      "\n",
+      "[['INCI Name', 'Caprylyl/Capryl Glucoside'], ['Function', 'Surfactant, Surfactant (Nonionic), Co-Emulsifier, Foaming Agent, Solubilizer, Cleansing Agent'], ['Ingredient Origin', 'Plant Origin'], ['Labeling Claims', 'Clean at Sephora, Natural, Organic'], ['Certifications & Compliance', 'Organic Certified, RSPO MassBalance Certified, NaTrue']]\n",
+      "\n",
+      "[['INCI Name', 'Niacinamide'], ['Function', 'Soothing Agent, Smoothing Agent, Moisturizing Agent, Blue Light Filter, Skin Barrier Protectant, Anti-Pollution Agent, Anti-Aging Agent'], ['Ingredient Origin', 'Synthetic'], ['Labeling Claims', 'BSE-free, Clean at Sephora, Credo Clean Standard'], ['Certifications & Compliance', 'IECIC (China), Kosher, Halal'], ['Benefit Claims', 'Shine Reducing, Barrier Function Improvement, Pigmentation Reduction']]\n",
+      "\n",
+      "[['INCI Name', 'Chlorhexidine Diundecylenate'], ['Function', 'Anti-Microbial Agent, Bacteriostatic Agent, Fungistatic Agent, Anti-Fungal Agent'], ['Labeling Claims', 'Non-Irritant, Biocompatible, Biodegradable']]\n",
+      "\n",
+      "[['INCI Name', 'Potassium Azeloyl Diglycinate'], ['Function', 'Brightening Agent, Sebum Regulator, Anti-Aging Agent, Conditioner, Moisturizing Agent, Optical Brightener, Anti-Acne Agent'], ['Labeling Claims', 'Clean at Sephora, Natural, Organic'], ['Benefit Claims', 'Anti-Aging, Improves Skin Elasticity, Skin Lightening']]\n",
+      "\n",
+      "[['INCI Name', 'Dipeptide Diaminobutyroyl Benzylamide Diacetate'], ['Function', 'Flattener, Anti-Aging Agent'], ['Ingredient Origin', 'Synthetic'], ['Labeling Claims', 'Non-GMO, Alcohol-free, Clean at Sephora'], ['Certifications & Compliance', 'EU Cosmetic Regulation 1223/2009 Compliant, REACH (Europe), IECIC (China)'], ['Benefit Claims', 'Fine Lines Reduction, Skin Protection, Rejuvenating']]\n",
+      "\n",
+      "[['INCI Name', 'Bacillus Ferment'], ['Function', 'Anti-Aging Agent'], ['Labeling Claims', 'Credo Clean Standard, Clean at Sephora'], ['Benefit Claims', 'Anti-Aging, Wrinkle Refinement'], ['Certifications & Compliance', 'CosIng Listed, IECIC (China)']]\n",
+      "\n",
+      "[['INCI Name', 'Cetrimonium Chloride'], ['Function', 'Emulsifier, Dispersant, Softener, Anti-Static Agent'], ['Ingredient Origin', 'Synthetic'], ['Labeling Claims', \"Credo Clean Standard, Clean at Sephora, Ulta Beauty's Conscious Beauty\"], ['Synonyms', 'Cetyl Trimethyl Ammonium Chloride , Cetyl(Trimethyl)Ammonium Chloride , Hexadecyl(Trimethyl)Ammonium Chloride , N,N,N-Trimethyl-1-Hexadecanaminium Chloride , Palmityltrimethylammonium chloride , Trimethylcetylammonium Chloride , Trimethylhexadecylammonium Chloride']]\n",
+      "\n",
+      "[['INCI Name', 'Dimethicone, Titanium Dioxide'], ['Function', 'UV Protector, UV Absorber, Blue Light Filter'], ['Ingredient Origin', 'Mineral Origin, Natural Origin'], ['Labeling Claims', \"Credo Clean Standard, Preservative-free, Ulta Beauty's Conscious Beauty\"], ['Benefit Claims', 'Skin Protection, Blue Light Protection, Formula Stability'], ['Certifications & Compliance', 'IECIC (China), EU Cosmetic Regulation 1223/2009 Compliant, REACH (Europe)']]\n",
+      "\n",
+      "[['INCI Name', 'Sodium Ascorbyl Phosphate'], ['Function', 'Lightening Agent, Skin Barrier Protectant, Antioxidant, Anti-Aging Agent'], ['Ingredient Origin', 'Synthetic'], ['Labeling Claims', 'BSE-free, Clean at Sephora, Credo Clean Standard'], ['Certifications & Compliance', 'IECIC (China), Kosher, EU Cosmetic Regulation 1223/2009 Compliant'], ['Benefit Claims', 'Anti-Aging, Formula Stability, Anti-Inflammatory']]\n",
+      "\n",
+      "[['INCI Name', 'Hydroxyethyl Acrylate/Sodium Acryloyldimethyl Taurate Copolymer'], ['Function', 'Viscosity Modifier, Stabilizer, Emulsifier'], ['Ingredient Origin', 'Synthetic'], ['Labeling Claims', \"Ulta Beauty's Conscious Beauty, Credo Clean Standard\"], ['Certifications & Compliance', 'RSPO MassBalance Certified']]\n",
+      "\n",
+      "[['INCI Name', 'Biosaccharide Gum-1'], ['Function', 'Film Former, Moisturizing Agent'], ['Ingredient Origin', 'Fermentation'], ['Labeling Claims', 'Clean at Sephora, Organic, Credo Clean Standard'], ['Certifications & Compliance', 'Organic Certified, IECIC (China), ECOCERT'], ['Benefit Claims', 'Anti-Aging, Strengthening, Moisturizing']]\n",
+      "\n",
+      "[['INCI Name', 'Hexylresorcinol'], ['Function', 'Lightening Agent'], ['Ingredient Origin', 'Synthetic'], ['Labeling Claims', \"Ulta Beauty's Conscious Beauty\"], ['Benefit Claims', 'Skin Lightening, Whitening, Skin Whitening'], ['Certifications & Compliance', 'United States Pharmacopeia (USP), Kosher, EFISC'], ['Synonyms', '4-Hexyl-1,3-benzenediol , 4-Hexylresorcinol']]\n",
+      "\n",
+      "[['INCI Name', 'Oryza Sativa (Rice) Bran Wax, Oryza Sativa (Rice) Bran Oil, Helianthus Annuus (Sunflower) Seed Wax'], ['Function', 'Viscosity Modifier'], ['Ingredient Origin', 'Natural Origin'], ['Labeling Claims', \"Natural, Ulta Beauty's Conscious Beauty, Credo Clean Standard\"]]\n",
+      "\n",
+      "[['INCI Name', 'PEG-6'], ['Chemical Name', 'PEG 300'], ['Function', 'Fluid Loss Control Additive, Stabilizer, Binder, Solubilizer, Rheology Modifier, Plasticizer, Viscosity Modifier, Suspension Aid, Solvent, Emulsion Stabilizer, Moisturizing Agent'], ['CAS Number', '25322-68-3'], ['Chemical Family', 'Polyethylene Glycols, Polyols, Amines'], ['Ingredient Origin', 'Petrochemical, Synthetic, Non-Animal Origin']]\n",
+      "\n",
+      "[['INCI Name', 'Polyisobutene, Polyacrylate-13, Polysorbate 20'], ['Function', 'Viscosity Modifier, Emulsifier'], ['Benefit Claims', 'Spreadability, Ready-To-Use'], ['Labeling Claims', \"Preservative-free, Ulta Beauty's Conscious Beauty, Solvent-free\"]]\n",
+      "\n",
+      "[['INCI Name', 'Tetrahydrodiferuloylmethane'], ['Function', 'Soothing Agent, Lightening Agent, UV Protector, Optical Brightener, Antioxidant'], ['Ingredient Origin', 'Plant Origin'], ['Labeling Claims', 'BSE-free, Clean at Sephora, GMO-free'], ['Certifications & Compliance', 'Kosher, Halal'], ['Benefit Claims', 'Antioxidant Properties, Skin Lightening, UV Protection'], ['Synonyms', '1,7-Bis(4-hydroxy-3-methoxyphenyl)-3,5-heptanedione']]\n",
+      "\n"
      ]
     }
    ],
@@ -26,40 +94,76 @@
     "content = response.content\n",
     "soup = BeautifulSoup(content, \"html.parser\")\n",
     "\n",
-    "parent = 'e1np0cu90 e1hg47tz0 css-1snax5j ev4fpqn0'\n",
-    "product_string = 'css-1enynbp e1uv08lu0'\n",
-    "inciCol = 'css-1kivc8p e71twrm0'\n",
-    "inci_string = 'css-lyel5l e71twrm1'\n",
-    "field_string = 'css-lyel5l e71twrm1'\n",
+    "everything = 'css-1yz6nhx ev4fpqn0'\n",
+    "brand_name = 'css-163r191 e1uv08lu0'\n",
+    "product_name = 'css-1enynbp e1uv08lu0'\n",
+    "detail = 'css-lyel5l e71twrm1'\n",
+    "proudct_card = 'e1np0cu90 e1hg47tz0 css-m4e2h0 ev4fpqn0'\n",
+    "'''\n",
+    "    within EVERYTHING Div, \n",
+    "        1. find BRAND_NAME class\n",
+    "        2. find PRODUCT_NAME class\n",
+    "        3. find all span\n",
+    "            within span,\n",
+    "                if == 'Function'\n",
+    "                if == 'INCI Name:'\n",
+    "                ....\n",
+    "\n",
+    "{\n",
+    "    product_card:{\n",
+    "                'product_name':'nike'\n",
+    "                'inci name': 'enzo'\n",
+    "                'function':'good for health'\n",
+    "    }\n",
+    "}                \n",
+    "\n",
+    "'''\n",
+    "\n",
+    "all = soup.find_all('div', class_= detail)\n",
+    "products = soup.find_all('div', class_ = product_name)\n",
+    "\n",
+    "productList = []\n",
+    "detailList = []\n",
+    "productDict = {}\n",
+    "\n",
+    "for a in all: \n",
+    "    productList.append(a.text.strip())\n",
+    "\n",
+    "for p in products:\n",
+    "    productList.append(p.text.strip())\n",
+    "\n",
+    "d = {}\n",
+    "l= []\n",
+    "\n",
+    "for p in productList:\n",
+    "    idx = p.find(':')\n",
+    "    k = p[:idx].strip()\n",
+    "    v = p[idx+1:].strip()\n",
+    "    l.append([k,v])\n",
+    "\n",
+    "grouped_data = []\n",
+    "current_inci_name = None\n",
+    "current_group = []\n",
+    "\n",
+    "for item in l:\n",
+    "    if item[0] == 'INCI Name':\n",
+    "        if current_group:\n",
+    "            grouped_data.append(current_group)\n",
+    "            current_group = []\n",
+    "        current_inci_name = item[1]\n",
+    "    current_group.append(item)\n",
+    "\n",
+    "if current_group:\n",
+    "    grouped_data.append(current_group)\n",
+    "\n",
+    "# Printing the grouped information\n",
+    "for group in grouped_data:\n",
+    "    print(group)\n",
+    "    \n",
     "\n",
     "\n",
-    "div_element = soup.find('div', class_= parent) ##-- usable\n",
     "\n",
-    "fieldName = div_element.find_all('span')\n",
-    "for f in fieldName:\n",
-    "    print(f.text.strip())\n",
-    "    if 'product-field-name' in f:\n",
-    "        print(f.text.strip())\n",
-    "\n",
-    "\n",
-    "# for i in container:\n",
-    "#     product_name = i.find('p',class_ = product_string)\n",
-    "#     print(product_name.text.strip())\n",
-    "\n",
-    "#     # inci_name = i.find('span', class_ = inci_string)\n",
-    "#     inci_name = i.find('div',class_ = inci_string)\n",
-    "#     print(inci_name.text.strip())\n",
-    "\n",
-    "#     fnction = i.find('span', class_ = fnction_string)\n",
-    "#     print(fnction.text.strip())\n",
-    "\n",
-    "#     origion = i.find('span', class_ = origion_string)\n",
-    "#     print(origion.text.strip() + '\\n')\n",
-    "\n",
-    "# div_element = soup.find_all('div',class_ = field_string)\n",
-    "\n",
-    "# for d in div_element:\n",
-    "#     print(d.text.strip())"
+    "\n"
    ]
   },
   {
@@ -68,12 +172,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "url = 'https://www.knowde.com/b/markets-personal-care/products'\n",
-    "page_number = 2\n",
     "\n",
+    "page_number_list = [i for i in range(1,101)]\n",
     "\n",
-    "page_url = f'{url}/{page_number}'\n",
-    "print(page_url)"
+    "for page in page_number_list:\n",
+    "    url = 'https://www.knowde.com/b/markets-personal-care/products'\n",
+    "    url = url + '//' + str(page)\n",
+    "    print(url)"
    ]
   },
   {
@@ -95,12 +200,13 @@
     "for span in span_elements:\n",
     "    if span.text == 'INCI Name:':\n",
     "        inci_name = span.find_next_sibling('span').text.strip()\n",
+    "        print('INCI Name:', inci_name.text.strip())\n",
     "    elif span.text == 'Function:':\n",
     "        fnction = span.find_next_sibling('span').text.strip()\n",
     "\n",
     "    # Print the extracted values\n",
-    "    print('INCI Name:', inci_name.text.strip())\n",
-    "    print('Function:', fnction.text.strip())"
+    "    \n",
+    "        print('Function:', fnction.text.strip())"
    ]
   }
  ],
